同步于: 12月13日11时2分

--- a/pages/p2/955652.md
+++ b/pages/p2/955652.md
@@ -1,4 +1,4 @@
-### 揭密：英军为何能在黑夜准确击落纳粹飞机？(图)
+### 内幕：中国最美情妇性贿赂搅动上海官场(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="英俊战士战斗机。" src="https://img3.secretchina.com/pic/2020/1-5/p2597831a839975789-ss.jpg"/>
+  <img alt="号称“最美情妇”的卢嘉丽" src="https://img2.secretchina.com/pic/2019/2-15/p2362531a13035661-ss.jpg" style="height:339px; width:600px"/>
   <br>
-   英俊战士战斗机。（图片来源：公有领域）
+   号称“最美情妇”的卢嘉丽（图片来源：网络）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,55 +29,52 @@
   </div>
  </div>
  <p>
-  1940年10月开始，
+  【看中国2020年12月13日讯】中共女间谍
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/纳粹" target="_blank">
-    纳粹
+   方芳
+  </strong>
+  通过
+  <strong>
+   性贿赂
+  </strong>
+  ，迅速打入敏感的美国政治界的丑闻曝光后，也有美国情报专家说，中共在美国乃至全球广泛撒下“美人计”。但其实据知中共对外官方输出的性贿赂，只不过是中共官场自身积累的“经验”。官媒曾报导，那个所谓“最美
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/情妇" target="_blank">
+    情妇
    </span>
-   德军
   </strong>
-  对
+  ”的
   <strong>
-   英国
+   卢嘉丽
   </strong>
-  展开夜间轰炸，起初由于英军战机夜战能力有限，德军轰炸机几乎为所欲为。但渐渐地，德国
-  <strong>
-   飞行员
-  </strong>
-  发现日子越来越难过，英国飞行员似乎都长了一双“猫眼”，能在黑夜里准确发现并击落德机，这到底是为什么呢？
+  ，据报只是化名，她将性贿赂在中共官场中发挥得淋漓尽致。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  <strong>
-   胡萝卜“造就”空中英雄？
-  </strong>
+  中共官媒刊文称，据现行《婚姻法》修改起草专家小组主要负责人统计，被查处的贪官污吏中95%都有“情妇”，腐败的领导干部中60%以上与“包二奶”有关。
  </p>
  <p>
-  对于这个问题，不光德军想知道答案，英国老百姓也想知道。于是，负责食物供给的英国官员站出来，宣称皇家
-  <span href="https://www.secretchina.com/news/gb/tag/空军" target="_blank">
-   空军
+  文章说，当高官情人成为一种职业，说明“
+  <span href="https://www.secretchina.com/news/gb/tag/性贿赂" target="_blank">
+   性贿赂
   </span>
-  飞行员吃了大量胡萝卜，正是其中的维生素使得他们的视力变得异常锐利。
+  ”已经是一种重要的武器，其威力绝不亚于金钱贿赂。在盘点中共官场“性贿赂”案件时，有一个不得不提及的人物，她就是被网友称为“史上最美高官情妇”的卢嘉丽。
  </p>
  <p>
-  吃胡萝卜能当英雄，还有什么比这套说辞能让英国人停止抱怨肉食不够，转而心甘情愿地大嚼胡萝卜呢！一时间，伦敦街头巷尾，大家都在谈论胡萝卜的“丰功伟绩”。德国人虽然半信半疑，但也不得不接受这一解释。德国科学家认为，胡萝卜中含有大量有利于视力的维生素，英国
-  <span href="https://www.secretchina.com/news/gb/tag/飞行员" target="_blank">
-   飞行员
+  文章说，她不但有“史上最美情妇”的称号。更重要的是
+  <span href="https://www.secretchina.com/news/gb/tag/卢嘉丽" target="_blank">
+   卢嘉丽
   </span>
-  视力大增，很可能与他们的食物有关。
+  也确实把“性贿赂”发挥到了淋漓尽致的地步。
  </p>
  <p>
-  战后，英军夜战王牌飞行员约翰･坎宁汉姆提及此事，不禁大笑起来：“截至1941年5月，我已在夜间击落12架德机，因为我的飞机上装备了极为秘密的仪器，能在夜间帮助我准确锁定德机，就像我长了一双‘猫眼’。而英国空军部为了掩饰该仪器的存在，故意编了个故事，说我们是常吃胡萝卜才厉害起来。”
+  卢嘉丽(1975年—)，江苏镇江人，化名，真实姓名不详。曾做过艺人、模特，并为多名高官情妇。传闻为2006年上海社保基金案重要嫌疑人，以策划艺人“卖春”交易诱使多名官员腐败而引发争议，案发后逃往国外，为被通缉人员。
  </p>
  <p>
-  坎宁汉姆提到的秘密仪器就是AI机载雷达，当时
-  <span href="https://www.secretchina.com/news/gb/tag/德军" target="_blank">
-   德军
-  </span>
-  只知道英军有地面预警雷达，但对AI机载雷达一无所知。
+  卢嘉丽自幼练习舞蹈，形象气质颇似香港演员张曼玉。20世纪九十年代，她进入上海一家文艺团体，后组织了一个模特经纪公司。在此期间，她成为上海市核电办主任、上海华发核电公司总经理的杨忠万的情人。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -92,11 +89,56 @@
   </div>
  </center>
  <p>
-  档案显示，早在1937年，英国就研制出世界上第一部
-  <span href="https://www.secretchina.com/news/gb/tag/机载雷达" target="_blank">
-   机载雷达
+  2000年前后，杨忠万因贪污千万元事发。为保全自己，卢嘉丽向专案组交代了自己所了解的情况。由于卢嘉丽在杨忠万的腐败案中无触犯法律行为，不久后，卢嘉丽获得自由，并隐姓埋名继续留在上海。图为杨忠万资料图。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  2001年底，卢嘉丽结识了上海沸点投资发展有限公司董事长张荣坤，并与其密谋靠情色诈骗。张荣坤负责寻找猎物，卢嘉丽负责公关，然后由张荣坤给予丰厚的提成。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  2002年10月，卢嘉丽开始首次性贿咯，诱使上海社保局局长、党组书记祝均一受骗。由此，祝均一所掌管的上海社保基金，几乎成了张荣坤的私人钱库。2003年初，张荣坤拿下上海路桥发展股份有限公司99.35%的股权。该公司拥有沪杭高速上海段30年的收费经营权，资产总值35.5亿。当时张荣坤的福禧投资集团只有5亿资金，根本无法夺标。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  张荣坤从祝均一掌管的上海社保基金中拆借资金达32亿之巨。借助这些金钱，张荣坤的个人财产疯狂增长，2005年，他以26亿资产名列
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
   </span>
-  ，科学家鲍恩博士领导的小组将一部小雷达安装到“安森”侦察机上，可探测到16千米外的船舶，后经改进增添了探测飞机的功能，被正式命名为“AI”。但装备了AI雷达的“安森”飞机太过落后，即便有雷达帮助，也很难与德国夜袭飞机抗衡。为了应急，英国皇家空军借用“美丽堡垒”轰炸机的机翼和后机身，研制出装备AI雷达的双发双座重型战斗机，命名为“英俊战士”。
+  富豪榜第48位。卢嘉丽也成了一名千万富姐。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -111,9 +153,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   德军恐惧的“寂静死神”
-  </strong>
+  为了铺开关系网，卢嘉丽利用美色开设了模特经纪公司，在这个外衣的掩盖下，她暗地为官员介绍演员、模特和艺人。因为要照顾很多官员，卢嘉丽干脆在上海的一家高级酒店长期租用两间总统套房，用作官员寻欢作乐的地方。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -128,22 +168,7 @@
   </div>
  </center>
  <p>
-  “英俊战士”名为“英俊”，但样子短粗臃肿，根本算不上英俊。坎宁汉姆说：“该机样子虽丑，威力却很大，时速可达515千米，加上自带的4门20毫米航炮和6挺航空机枪，火力超过当时任何一款战斗机。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  从1940年9月开始，100架“英俊战士”战斗机装备了英军4个夜战中队。它能在AI雷达引导下悄悄接近目标，然后4门航炮同时开火，只需一个短点射就能将德国轰炸机打得凌空爆炸。
+  当然，为了掌握这些官员的把柄，每当他们在进行性交易时，卢嘉丽都会用针孔摄像机将整个过程拍下来。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -162,7 +187,7 @@
   </ins>
  </center>
  <p>
-  “英俊战士”另一个可怕之处是发动机声音小，德军往往刚听到声音就已经进入它的射程，很快被击落了，所以德国人把“英俊战士”叫作“寂静死神”。
+  2006年，上海市政府办公厅原副秘书长、后任宝山区区长的秦裕在卢嘉丽的陪同下，到巴黎旅游，卢嘉丽给秦裕介绍了一个法国女演员陪侍。中国官员在巴黎“买春”的消息在法国被披露后，负责秦裕法国之行的福禧投资集团浮出了水面。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -177,9 +202,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   成功的关键是团队合作
-  </strong>
+  由于风声越来越紧，2006年4月的一天。卢嘉丽拿出官员们性交易的录像带交给张荣坤说：“如果你被抓，就把这些官员供出来，可以减轻罪行。”张荣坤将手中还没有处理掉的赃款存折交给卢嘉丽，让她藏起来。很快，张荣坤被立案侦查。从此揭开上海社保基金惊天大案。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -194,7 +217,7 @@
   </div>
  </center>
  <p>
-  具体到坎宁汉姆本人，他在夜战中击落20架德机，他驾驶的“英俊战士”飞机身上贴满了表示击落德机数量的“铁十字”。
+  2006年4月，张荣坤被立案侦查，上海社保基金案爆发。卢嘉丽逃往国外。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -209,7 +232,7 @@
   </div>
  </center>
  <p>
-  1940年11月19日，坎宁汉姆驾机拦截袭击伯明翰的德国机群，将一架Ju－88轰炸机击落，首开AI雷达引导攻击成功的记录。次年4月，坎宁汉姆的夜战生涯迎来胜利的高峰，他在一个夜晚就击落3架德机。
+  2006年9月，刚上任两个月的国家统计局局长邱晓华落马。邱晓华在上海时也是卢嘉丽用美色来贿赂的对象之一。之后，专案组发出了对卢嘉丽的通缉令。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -224,7 +247,26 @@
   </div>
  </center>
  <p>
-  二战结束后，有人问他如何成为夜战王牌，坎宁汉姆笑了笑：“很简单，观察员只要紧盯十字线上的绿点就行了，不需要吃很多胡萝卜。”然后，他又严肃地说：“其实，我们成功的关键是团队合作，夜战就像一座金字塔，两个人驾驶‘英俊战士’飞在高空，下面是地面引导雷达、探照灯和控制站，身处其中的每个人都要做好自己的工作，这样才能环环相扣。否则，多先进的飞机也是浪费！”
+  2007年3月2日，官方发布了上海社保案查处消息，披露了上海社保局原局长祝均一、上海市宝山区原区长秦裕等9名官员涉嫌犯罪等事实。办案人员在审查时，发现这些录像带和张荣坤所攫取的金钱，都与一个美女有关。考虑到某些因素，官方将这位美女化名为卢嘉丽。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  据悉，整个社保基金案自2006年开始，卷入了包括陈良宇等20多名贪官，但最终的判决却草草收场，这是因为社保基金案查不下去，因为后面还涉及到
+  <span href="https://www.secretchina.com/news/gb/tag/江泽民" target="_blank">
+   江泽民
+  </span>
+  两个儿子等更大的后台。
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -238,11 +280,11 @@
    </div>
   </center>
   <p>
-   责任编辑:辰君
+   责任编辑:司徒恩
   </p>
   <p>
    本文短网址:
-   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb3uaL"/>
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb40bk"/>
    转载请注明出处，
    <span style="color:red">
     严禁建立镜像网站
@@ -288,13 +330,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/08/932501.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/955652.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/955652.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/955652.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/13/955652.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p6/932501.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p2/955652.md' width='0px' height='0px'/>
