--- a/pages/nf4514/n12617165.md
+++ b/pages/nf4514/n12617165.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【大选更新12.13】华府呼声：神主宰一切" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/2-11.jpg"/>
+<div><img alt="【大选更新12.13】法律战仍在进行 拜登尚未当选" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/2-11.jpg"/>
 <div class="caption">
  12月12日，数十万来自美国各州的民众聚集首都华盛顿DC，举行盛大集会和游行，要求“停止窃选（Stop The Steal）”，力挺川普总统。图为支持者在自由广场举行集会。（李辰／大纪元）
 </div></div><hr/>
@@ -15,7 +15,7 @@
 #### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 <div><p>
- 【大纪元2020年12月13日讯】（大纪元记者徐简综合报导）12月12日（周六），华盛顿DC再次举行“制止窃选、支持
+ 【大纪元2020年12月13日讯】（大纪元记者徐简、戴芙若、谢佳宣综合报导）12月12日（周六），华盛顿DC再次举行“制止窃选、支持
  <ok href="https://www.epochtimes.com/gb/tag/%E5%B7%9D%E6%99%AE.html">
   川普
  </ok>
@@ -66,6 +66,202 @@
  情况的实时更新：
 </h4>
 <h3>
+ 川普：选举挑战尚未结束 会继续前进
+</h3>
+<p>
+ 美国总统川普（特朗普）12月12日表示，尽管选举人团将于周一（12月14日）开始投票，但他和他的竞选团队“将继续推进”对11月大选选举结果的法律挑战。
+</p>
+<p>
+ 川普周六（12月12日）接受福克斯节目“福克斯与朋友们”（Fox＆Friends）的共同主持人布莱恩‧基尔梅德（Brian Kilmeade）采访中说，尽管最高法院驳回了德克萨斯州针对4个摇摆州提起的诉讼，但他仍有其它挑战。
+</p>
+<p>
+ “不，这还没有结束。我们继续前进，我们将继续前进。我们有大量地方案件。”川普说。
+</p>
+<p>
+ “他们给我们的时间很少。但我们抓住了他们，正如你们所知道的那样，他们作假，丢弃选票，做了很多事情，令人难以置信。” 川普说，有人以死者的名义投票，“数万张选票”被非法提交。这是一场“被操纵的选举”。
+</p>
+<p>
+ 针对最高法院驳回德州起诉4个摇摆州的案子，川普说，“我们已经证明了这一点（选举舞弊），但包括最高法院在内的任何法官都没有勇气。我对此感到非常失望。”
+</p>
+<p>
+ <ok href="https://www.epochtimes.com/gb/20/12/13/n12617568.htm">
+  详情请阅全文
+ </ok>
+ 。
+</p>
+<h3>
+ 犹他州前议长：维护宗教自由 川普做得最多
+</h3>
+<p>
+ 12月12日，美国首都华盛顿DC再次举行“停止窃选”大型集会游行活动。参加集会的前犹他州众议院议长Greg Huges向新唐人电视台记者表示，宗教自由是美国人的核心，川普（特朗普）总统是一位真正维护信仰自由的总统，他在维护宗教自由方面，比任何一任总统都要做得多。
+</p>
+<p>
+ “艰难时局不会长久 坚强之人可以走得久远”
+ <br/>
+ Huges表示，美国甚至全球都面临艰难时期，包括中共病毒（武汉肺炎）疫情的影响以及美国大选“事情发展的方式，产生了对违法行为的质疑。”
+</p>
+<p>
+ 不过，他同时指出，艰难的时局不会长久，但坚强之人可以走得久远。“我们非常支持川普总统为我们做的所有的事情。他是我们共和党的领袖，我们要继续向前走。”他说。
+</p>
+<p>
+ Huges是犹他州最早支持川普总统的最高级别的官员，和总统还有他的儿子小唐纳德建立了很好的关系。
+</p>
+<p>
+ Huges认为这次集会很重要，它告诉人们，不要放弃，“这是各种人的融合，他们都是普通的民众，我们不会输，我们不气馁，我们坚持抗争，总统一直在这么做，我们也会这么做。”他说。
+</p>
+<p>
+ 他会这样告诉川普总统：“我们热爱我们的总统，他在白宫为了我们，我们感觉得到，他在为普通民众，他在维护我们，我们支持他。我们互相鼎力支持。”
+</p>
+<p>
+ <ok href="https://www.epochtimes.com/gb/20/12/13/n12616822.htm">
+  详情请阅全文
+ </ok>
+ 。
+</p>
+<h3>
+ 总统竞选现场组织者：川普在为正义而战
+</h3>
+<p>
+ 在华府12月12日举行的挺川游行集会中，亚利桑那州马里科帕（Maricopa）川普竞选活动现场组织者亚历克斯·斯托瓦尔（Alex CrazyLegs Stovall）说：“如果我能对川普总统说点什么，我会说：请继续战斗，您正在为正义而战！”“我非常敬重他。”
+</p>
+<p>
+ 斯托瓦尔说：“我支持川普总统，因为我是退伍军人。他是爱国者，他爱美国，他不希望美国被出卖了，我也是。我为自己的国家感到自豪。”
+</p>
+<p>
+ 斯托瓦尔认为今天的活动很有意义，“在我看来，（大选中）有很多不诚实之处；人们听到了很多不清楚的信息。今天我来这里，就是为了确保我们可以创建一项运动，以获取真相，并澄清（对川普的污蔑）。
+</p>
+<p>
+ <ok href="https://www.epochtimes.com/gb/20/12/13/n12616872.htm">
+  详情请阅全文
+ </ok>
+ 。
+</p>
+<h4>
+ 商业组织领袖：必须抗争 保护美国自由和经济
+</h4>
+<p>
+ 在12月12日于华府举行的“挺川普、反窃选”大型游行集会活动中，犹他州商业复兴组织（Utah Business Revival）创办人、前盐湖城警官穆特索斯（Eric Moutsos）表示，美国人民必须和川普总统一道抗争，保护美国的自由和经济。
+</p>
+<p>
+ 他说：“如果不坚守自由的原则，我们至今建立起的一切将灰飞烟灭。无论你是保守派还是自由派，如果没有自由市场……整个世界的经济都依赖于美国经济。我们的敌人知道这一点。他们知道如果摧毁美国的经济，一切都会崩溃。”
+</p>
+<p>
+ 穆特索斯批评反对川普的势力利用中共病毒（武汉肺炎）疫情钳制民众的自由，扼杀经济活动。
+</p>
+<p>
+ <ok href="https://www.epochtimes.com/gb/20/12/13/n12617021.htm">
+  详情请阅全文
+ </ok>
+ 。
+</p>
+<h3>
+ 基金会创办人：川普是今生见过的最好总统
+</h3>
+<p>
+ 12月12日，美国首都华盛顿DC举行了“停止窃选”大型集会游行活动。Streetlights Unity基金会创办人凯什·李·凯利（Kash Lee Kelly）参加了是日的集会。凯利表示，川普总统帮助唤醒了一个国家的人，川普是他“今生见过的最好总统”。
+</p>
+<p>
+ 凯利表示，川普（特朗普）总统一直在为美国而战，而且也从未停止过为美国而战。所以，他认为，“所有坚信自己是爱国者的美国人民都在为川普总统而战。”
+</p>
+<p>
+ 凯利希望世人了解，他们不仅仅是在为川普总统而战。他说：“请记住，这场战斗是为了美国而战。所以我们的奋战并未停止，它才刚刚开始，我们要继续为美国而战。不管川普总统是否连任，我们都希望他能够连任。但不管怎样，他还拥有我们所有人（的支持），而我们要继续为我们的国家而战，就像川普总统一直为美国奋战一样。”
+</p>
+<p>
+ <ok href="https://www.epochtimes.com/gb/20/12/13/n12616816.htm">
+  详情请阅全文
+ </ok>
+ 。
+</p>
+<h3>
+ 自由思想者项目总裁：
+ <ok href="https://www.epochtimes.com/gb/tag/%E5%A4%A7%E9%80%89%E8%88%9E%E5%BC%8A.html">
+  大选舞弊
+ </ok>
+ 羞辱爱国者
+</h3>
+<p>
+ 2020年12月12日（周六），自由思想者项目的总裁和创始人皮尔森（CJ Pearson）参加了在华府举行的支持川普总统连任、反对窃取美国大选的集会游行活动，他表示，此次大选是对美国爱国者的羞辱，而媒体为了自己的利益成为了民主党的左膀右臂。
+</p>
+<p>
+ 皮尔森表示，促使他来到集会现场是因为，在此次大选中，那些热爱自己国家的美国人、那些热爱自己的总统的美国人、以及那些愿意为确保这个国家每个角落中的每个人实现美国梦而不惜一切的美国人受到了羞辱。
+</p>
+<p>
+ “美国人民必须对选举充满信心，并相信我们国家有能力进行自由、公正的选举，但11月初发生的事情是对这种信心的残暴践踏，就像是一位出来支持总统、辛苦工作的美国人被人吐了一脸口水。”
+</p>
+<p>
+ “我们在全国范围内看到的是对这位总统的兴奋和热情，这不是像以往一样只是一时的热情，而是持续高涨的，他们愿意为确保这位总统在这次选举中获得自由、公正而付出一切努力，这是这位美国总统应得到的，也是美国人的应得的，这就是为什么我们今天在这里为他而战。”
+</p>
+<p>
+ 对于最高法院拒绝受理德州提起的诉讼，皮尔森表示，随着各地法律诉讼的进行，最高法院的法官们最终要面对选举中发生的种种舞弊事实。
+</p>
+<p>
+ <ok href="https://www.epochtimes.com/gb/20/12/12/n12615934.htm">
+  详情请阅全文
+ </ok>
+ 。
+</p>
+<h3>
+ 美2位参议员不排除对总统选举结果提异议
+</h3>
+<p>
+ 美国二位国会参议员表示，他们不排除和众议员一起在2021年1月6日的国会联席会议期间，对总统选举结果提出反对意见，拒绝选举人团投票给拜登。
+</p>
+<p>
+ 参议员兰德·保罗（Rand Paul）上周四（12月10日）接受CNN采访时表示，他不排除在1月6日国会召开联席会议接受选举团投票时，加入众议院成员反对和挑战选举结果。保罗说：“我们还在研究所有法律案件发生的法律问题，我们将在看到所有法律挑战后做出决定。”
+</p>
+<p>
+ 另一位参议员罗恩·约翰逊（Ron Johnson）近日对记者表示，他也将保留此选项。约翰逊是美国参议院国土安全和政府事务委员会主席，他将在本周三（12月16日）举行首场国会听证会，以审查2020年总统大选中的“违规行为”。
+</p>
+<p>
+ 根据国会规则，任何联邦参众议员都可以在联席会议期间共同对某州的选举人票提出异议，使国会两院进行全体投票，以决定是接受还是拒绝该州提交的选举人团票，之后参众两院将对此进行辩论，辩论时间将限制在两个小时内结束。
+</p>
+<p>
+ <ok href="https://www.epochtimes.com/gb/20/12/13/n12617470.htm">
+  详情请阅全文
+ </ok>
+ 。
+</p>
+<h3>
+ 资深顾问：不支持“川普运动”将无政治前途
+</h3>
+<p>
+ 12月12日，数万名来自全美各地的选民聚集在华盛顿，举行了声势浩大的“制止窃选、支持川普连任”的游行集会活动。来自俄亥俄州的资深企业发展顾问法斯特（Mark Fast）表示，认识不到川普总统背后巨大民意的人是没有政治前途的。
+</p>
+<p>
+ 他说：“川普总统赢得的支持和热情是我们此生看到的所有总统中最高的。”“我记得克林顿等前总统，其获得的（民众的）支持和热情不及（川普的）十分之一。”
+</p>
+<p>
+ 法斯特认为川普总统如此受到爱戴的原因是：“他一直如此诚恳，直言不讳。”“大家都知道自己可以信任他，他会分享其真正的所思所想，也会将承诺践行到底。其他大多数政客都做不到。”
+</p>
+<p>
+ “其他的竞选者如果意识不到川普和这场（政治）运动背后的力量和热情，如果他们不予以支持，其政治生涯将终结。”
+</p>
+<p>
+ <ok href="https://www.epochtimes.com/gb/20/12/13/n12616773.htm">
+  详情请阅全文
+ </ok>
+ 。
+</p>
+<h3>
+ 鲍威尔紧急请求高院令摇摆州撤销认证
+</h3>
+<p>
+ 美国知名律师鲍威尔（Sidney Powell）正在要求联邦最高法院立即行动，处理她对多个摇摆州提出的有关选举诚信和大选结果的法律诉讼，并命令这些州撤销认证。
+</p>
+<p>
+ 鲍威尔在周五（12月11日）表示，她已经向美国最高法院提交了紧急请求，要求大法官们命令乔治亚州、密歇根州和亚利桑那州的官员立即撤销对2020年选举结果的认证，并阻止这些州的选举人进行投票。
+ <br/>
+ 预计鲍威尔也将就她的威斯康星州案提出紧急请求。这些请求旨在维持各州的现状，以便最高法院有时间考虑她诉讼中提出的指控。
+ <br/>
+ “这些案子提出了宪法问题，并证明了大规模的舞弊行为。我们的原告有资格、‘我们人民’不会允许选举被操纵，”鲍威尔周五在推特发表声明说。
+</p>
+<p>
+ <ok href="https://www.epochtimes.com/gb/20/12/13/n12617458.htm">
+  详情请阅全文
+ </ok>
+ 。
+</p>
+<h3>
  康州民众：上帝选择了川普 他将赢得胜利
 </h3>
 <p>
@@ -113,11 +309,7 @@
  </figcaption><br/>
 </figure><br/>
 <p>
- 12月12日星期六，加州民众继续在首府沙加缅度举行“制止窃选、支持川普连任”的集会。当天中午，数百人随着现场乐队演奏的星条旗永不落的乐曲开始了反对窃选集会。许多民众上前演讲，痛批
- <ok href="https://www.epochtimes.com/gb/tag/%E5%A4%A7%E9%80%89%E8%88%9E%E5%BC%8A.html">
-  大选舞弊
- </ok>
- 恶行，呼吁更多的人站出来，维护美国宪法，并坚信川普最终一定会赢，因为神在掌控一切。
+ 12月12日星期六，加州民众继续在首府沙加缅度举行“制止窃选、支持川普连任”的集会。当天中午，数百人随着现场乐队演奏的星条旗永不落的乐曲开始了反对窃选集会。许多民众上前演讲，痛批大选舞弊恶行，呼吁更多的人站出来，维护美国宪法，并坚信川普最终一定会赢，因为神在掌控一切。
 </p>
 <p>
  “拜登永远不会成为美国总统，因为神在掌控一切，”虔诚的基督徒卡尔顿·林奇（Carlton Lynch）说，“美国是神创造的，我们为神而活。神会听到我们的祈祷，神不会丢下我们不管。耶稣在坟墓中呆了二天，魔鬼以为它们赢了，但耶稣再度复活。今天神也会再次展现神迹。”
@@ -160,7 +352,7 @@
  2020年12月12日星期六，上千名来自密歇根州各界民众再次聚集在密歇根州首府蓝辛市州议会大楼前，举行和平挺川普总统游行和集会。也是呼应同一天在美国首府华盛顿DC的“制止窃选、支持川普连任”大型活动。
 </p>
 <p>
- 密歇根州州祈祷之家主任Rick Warzywak也来到现场，带领民众一起祈祷。他说：“今天是寻求神，向天堂呼吁的一天。我们在这里游行到国会大厦，是为了让邪恶的东西倒下，让神给予的纯洁升起。”他还表示，“这就是我们今天在这里的原因。我们相信，人们祈祷，上帝会听，祂也会回应我们的祈祷。”
+ 密歇根州州祈祷之家主任Rick Warzywak也来到现场，带领民众一起祈祷。他说：“今天是寻求神，向天堂呼吁的一天。我们在这里游行到国会大厦，是为了让邪恶的东西倒下，让神给予的纯洁升起。”他还表示，“这就是我们今天在这里的原因。我们相信，人们祈祷，上帝会听，他也会回应我们的祈祷。”
 </p>
 <p>
  高级牧师Lee Williams说：“我知道这次选举就是舞弊，所以我们来这里祈祷，求神赋予能力和智慧。我们相信川普总统会赢，因为他在为美国的传统价值观而战。当他说 ‘让美国再次伟大’时，他说的是美国作为一个强大的国家在主持正义，而不是被其它国家，尤其是被中国（中共）利用或误用。”
@@ -200,7 +392,7 @@
  Lisa Hunter是一位高中历史教师，周六参加了华盛顿DC的集会。她告诉新唐人电视台，孩子们在学校被灌输“美国不好，社会主义好”。
 </p>
 <p>
- Hunter说，她对于孩子们在学校和大学里这样被洗脑感到沮丧，她认为人民应该“为真相挺身而出”。“这可能会是一个漫长的过程，但是无论我们在和谁探讨”，
+ Hunter说，她对于孩子们在学校和大学里这样被洗脑感到沮丧，她认为人民应该“为真相挺身而出”。“这可能会是一个漫长的过程，但是无论我们在和谁探讨”。
 </p>
 <p>
  Hunter表示，“只管告诉（人们）真相”。“我今天来到这里主要是支持我的国家对自由选举的支持，但是我却认为这（自由选举）并没有发生。”Hunter补充，“这就是为什么我们会来到这里。”
@@ -220,9 +412,7 @@
  “过去，我们都在祈求一场压倒性的胜利，我们得到了。”12月12日，“维吉尼亚州支持川普妇女团体”（Virginia Women for Trump）创办人兼现任会长爱丽丝·巴特勒·肖特（Alice Butler-Short）说，“而现在，我们祈求一场压倒性的胜利，战胜已经渗透进来的邪恶。”
 </p>
 <p>
- 周六，肖特在最高法院前举办的“上帝之下的统一国家”（One Nation Under God）集会上，呼吁人们向神灵祷告，战胜企图从美国人民手中夺走胜利的邪恶力量。
- <br/>
- “上帝不会让我们失望，因为我们是带着我们的心和灵魂而来。我们希望为我们的子孙，保留一个’上帝之下的统一国家。”她说。
+ 周六，肖特在最高法院前举办的“上帝之下的统一国家”（One Nation Under God）集会上，呼吁人们向神灵祷告，战胜企图从美国人民手中夺走胜利的邪恶力量。“上帝不会让我们失望，因为我们是带着我们的心和灵魂而来。我们希望为我们的子孙，保留一个’上帝之下的统一国家。”她说。
 </p>
 <h3>
  弗林将军赞：大纪元了不起！
@@ -236,7 +426,7 @@
  </figcaption><br/>
 </figure><br/>
 <p>
- 2020年12月12日上午10点，华府自由广场聚集了大批的美国民众，前国安顾问迈克尔‧弗林（Michael Flynn）将军，在获川普总统赦免后首次公开露面，他在演讲中特别赞扬了因真实报导大选新闻而广受好评的媒体——《大纪元时报》。
+ 2020年12月12日上午10点，华府自由广场聚集了大批的美国民众，前国安顾问迈克尔·弗林（Michael Flynn）将军，在获川普总统赦免后首次公开露面，他在演讲中特别赞扬了因真实报导大选新闻而广受好评的媒体——《大纪元时报》。
 </p>
 <p>
  “我们要靠我们的信念和勇气去战斗，正如我所说，不要因恐惧而窒息、放弃我们享受自由的权利。”他说，“大纪元做了了不起的工作！”台下观众随即响起热烈的掌声予以回应。
@@ -252,11 +442,11 @@
   <img alt="" class="size-large wp-image-12617372" src="https://i.epochtimes.com/assets/uploads/2020/12/3-10-600x400.jpg"/>
  </ok>
  <br/><figcaption class="wp-caption-text">
-  刚刚当选为维吉尼亚州第五选区国会议员的鲍勃‧古德（Bob Goode）12月12日在首都华盛顿DC，参加了“制止窃选、支持川普总统”的大型集会游行。（新唐人电视台/截图）
+  刚刚当选为维吉尼亚州第五选区国会议员的鲍勃·古德（Bob Goode）12月12日在首都华盛顿DC，参加了“制止窃选、支持川普总统”的大型集会游行。（新唐人电视台／截图）
  </figcaption><br/>
 </figure><br/>
 <p>
- 刚刚当选为维吉尼亚州第五选区国会议员的鲍勃‧古德（Bob Goode）12月12日在首都华盛顿DC，参加了“制止窃选、支持川普总统”的大型集会游行，呼吁共和党人不能再试图置身事外，应共同努力确保大选的公平、公正。
+ 刚刚当选为维吉尼亚州第五选区国会议员的鲍勃·古德（Bob Goode）12月12日在首都华盛顿DC，参加了“制止窃选、支持川普总统”的大型集会游行，呼吁共和党人不能再试图置身事外，应共同努力确保大选的公平、公正。
 </p>
 <p>
  古德表示他参加集会是因为他强烈支持川普总统，“他是我一生中见过的最棒的总统。没有任何一个总统比他更适合连任，所以我要在这里支持他。我也在这里为选举的完整性发声，我们需要确保每张合法选票都能被统计，我们也需要审查每一项非法或违规选票的指控。”
@@ -273,10 +463,10 @@
  </figcaption><br/>
 </figure><br/>
 <p>
- “在此次大选中，主流媒体报导产生了巨大的负面作用。”企业家哈里斯（David JHarris）在周六（12月12日）举行的华府挺川大游行中说：主流媒体不报总统业绩，攻击他四年。
+ “在此次大选中，主流媒体报导产生了巨大的负面作用。”企业家哈里斯（David J Harris）在周六（12月12日）举行的华府挺川大游行中说：主流媒体不报总统业绩，攻击他四年。
 </p>
 <p>
- “总的来说，过去四年，尤其是主流媒体报导一直在不停地憎恨这位总统，散布谎言，让美国人民反对这位总统，不谈论这位总统的执政业绩。”他说，“黑人社区作为一个整体，应该爱这个总统和他所做的，他为黑人社区做了很多（贡献），但他们不知道。所以，他们听到的是编造了的报导剪辑，使总统看起来像一个种族主义者。”
+ “总的来说，过去四年，尤其是主流媒体的报导一直在不停地憎恨这位总统，散布谎言，让美国人民反对这位总统，不谈论这位总统的执政业绩。”他说，“黑人社区作为一个整体，应该爱这个总统和他所做的，他为黑人社区做了很多（贡献），但他们不知道。所以，他们听到的是编造了的报导剪辑，使总统看起来像一个种族主义者。”
 </p>
 <h3>
  川普到西点军校看比赛 欢迎声“山呼海啸”
@@ -306,17 +496,17 @@
   <img alt="" class="size-large wp-image-12617373" src="https://i.epochtimes.com/assets/uploads/2020/12/2-12-600x400.jpg"/>
  </ok>
  <br/><figcaption class="wp-caption-text">
-  图为前美国副总统、民主党2020年总统候选人乔‧拜登（Joe Biden，左）与儿子亨特‧拜登（Hunter Biden）。（Bruce Bennett/Getty Images）
+  图为前美国副总统、民主党2020年总统候选人乔·拜登（Joe Biden，左）与儿子亨特·拜登（Hunter Biden）。（Bruce Bennett/Getty Images）
  </figcaption><br/>
 </figure><br/>
 <p>
- 美国大选前惊爆拜登家族涉非正常海外业务，而最新曝光的一封电邮显示，亨特‧拜登（Hunter Biden）称他的父亲、民主党总统候选人乔‧拜登（Joe Biden）和他的中国商业伙伴为“办公室同事”。
+ 美国大选前惊爆拜登家族涉非正常海外业务，而最新曝光的一封电邮显示，亨特·拜登（Hunter Biden）称他的父亲、民主党总统候选人乔·拜登（Joe Biden）和他的中国商业伙伴为“办公室同事”。
 </p>
 <p>
- 《每日来电新闻基金会》（DCNF）报导，亨特于2017年9月21日致信他此前位于华盛顿DC办公室的物业总经理。他在邮件中写道：“请为办公室新同事配钥匙。”然后列出了他的父亲乔‧拜登、他的继母吉尔‧拜登（Jill Biden）、他的叔叔吉姆‧拜登（Jim Biden）和董功文（Gongwen Dong）等“办公室新同事”名单。
+ 《每日来电新闻基金会》（DCNF）报导，亨特于2017年9月21日致信他此前位于华盛顿DC办公室的物业总经理。他在邮件中写道：“请为办公室新同事配钥匙。”然后列出了他的父亲乔·拜登、他的继母吉尔·拜登（Jill Biden）、他的叔叔吉姆·拜登（Jim Biden）和董功文（Gongwen Dong）等“办公室新同事”名单。
 </p>
 <p>
- 根据美国参议院国土安全委员会9月公布的一份报告，中共企业华信能源向亨特‧拜登的公司西哈德逊III（Hudson West III）汇去500万美元。
+ 根据美国参议院国土安全委员会9月公布的一份报告，中共企业华信能源向亨特·拜登的公司西哈德逊III（Hudson West III）汇去500万美元。
 </p>
 <h3>
  美参院下周三选举听证会 知名律师将作证
@@ -326,20 +516,20 @@
   <img alt="" class="size-large wp-image-12617181" src="https://i.epochtimes.com/assets/uploads/2020/12/4-9-600x400.jpg"/>
  </ok>
  <br/><figcaption class="wp-caption-text">
-  图为美国参议院国土安全和政府事务委员会主席、威斯康星州的参议员、共和党人罗恩‧约翰逊（Ron Johnson）。(Toni Sandys-Pool/Getty Images)
+  图为美国参议院国土安全和政府事务委员会主席、威斯康星州的参议员、共和党人罗恩·约翰逊（Ron Johnson）。(Toni Sandys-Pool/Getty Images)
  </figcaption><br/>
 </figure><br/>
 <p>
  美国参议院国土安全和政府事务委员会（Senate Homeland Security and Governmental Affairs Committee）将于下周三（12月16日）举行首次国会听证会，以审查2020年总统大选中的“违规行为”。
 </p>
 <p>
- 国土安全和政府事务委员会主席、威斯康星州的参议员、共和党人罗恩‧约翰逊（Ron Johnson）邀请知名律师肯‧斯塔尔（Ken Starr）和关键战场州的律师出席作证。
+ 国土安全和政府事务委员会主席、威斯康星州的参议员、共和党人罗恩·约翰逊（Ron Johnson）邀请知名律师肯·斯塔尔（Ken Starr）和关键战场州的律师出席作证。
 </p>
 <p>
  约翰逊表示，他的听证会旨在“恢复人们对系统的信心”，只是想“揭示”选举中发生的“可疑活动”，并没有下何定论或推翻选举结果。他还表示，听证会将帮助他决定是否与众议院共和党人一起在1月6日的国会计算选举人票会议上挑战选举结果。约翰逊说，他们还在考虑邀请宾州和乔州的证人出席。
 </p>
 <p>
- 而参议院少数党领袖、民主党人查克‧舒默（Chuck Schumer）本周在听证会上抨击约翰逊，要求他立即取消听证会。
+ 而参议院少数党领袖、民主党人查克·舒默（Chuck Schumer）本周在听证会上抨击约翰逊，要求他立即取消听证会。
 </p>
 <p>
  【大选更新12·12】请点击
@@ -349,7 +539,7 @@
  。
 </p>
 <p>
- 责任编辑：李玲
+ 责任编辑：李玲 ＃
 </p>
 </div>
 <hr/>
