--- a/pages/soh6/453253.md
+++ b/pages/soh6/453253.md
@@ -111,6 +111,18 @@
  <p>
   川普此前表示，如果第230条继续生效，《国防授权法案》将不会得到他的签署，他指出，目前大科技公司正在封锁保守派言论，举动类似“共产主义国家。”
  </p>
+ <h2>
+  国家级黑客袭击美财政部
+ </h2>
+ <p>
+  美国国家安全委员会（National Security Council，简称NSC）发言人证实，一个外国政府支持的黑客团队袭击了美国财政部和美国商务部的一个部门。相关声明并未透露太多细节，仅证实当局正在对其问题进行控制。
+ </p>
+ <p>
+  黑客的攻击被指通过入侵办公软件Microsoft的Office365实施的。有知情人士告诉外媒，本次黑客攻击来自外国政府支持的“非常老练”的组织，以至于国家安全委员会周六（12月12日）在白宫为此举行会议。
+ </p>
+ <p>
+  知情人士没有指出哪个国家筹备了该场攻击。
+ </p>
  <p class="meta-btm">
   责任编辑：张莉莉
  </p>
