--- a/pages/nsc418/n12619321.md
+++ b/pages/nsc418/n12619321.md
@@ -15,7 +15,7 @@
 #### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 <div><p>
- 【大纪元2020年12月14日讯】（大纪元记者徐简综合报导）大选乱象见真心，至暗时刻显真金。刚刚过去的周末，美国人民挺川大游行，具有鲜明的宗教和信仰色彩，反映出美国保守派选民对神的坚信不疑和不屈的精神。
+ 【大纪元2020年12月14日讯】（大纪元记者徐简综合报导）大选乱象见人心，至暗时刻显真金。刚刚过去的周末，美国人民挺川大游行具有鲜明的宗教和信仰色彩，反映出美国保守派选民对神的坚信不疑和不屈的精神。
 </p>
 <p>
  美国著名律师鲍威尔（Sidney Powell）正在要求联邦最高法院立即行动，处理她对乔治亚州、密歇根州和亚利桑那州提出的法律诉讼，要求这些州立刻撤销认证，并阻止这些州的选举人进行投票。预计鲍威尔也将就威斯康星州案提出紧急请求。
