--- a/pages/nsc418/n12619321.md
+++ b/pages/nsc418/n12619321.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新12.14】鲍威尔：新证据交最高法院" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/Capture-7-600x400.jpg"/>
+<div><img alt="【大选更新12.14】川普挑战新墨西哥州选举结果" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/000_8WZ7KL-600x400.jpg"/>
 <div class="caption">
- 鲍威尔律师周日（12月13日），致信最高法院，指出对于密歇根州多米尼投票系统（Dominion Voting Systems）的诉状，她的律师团队有新的证据提交，对于法院审理该案至关重要。（大纪元）
+ 川普总统周一（12月14日）向新墨西哥州提起诉讼，挑战该州的选举结果。图为川普于2020年12月12日离开白宫前往纽约西点军校，参加陆军/海军足球比赛。（ANDREW CABALLERO-REYNOLDS / AFP）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
