--- a/pages/p8/955846.md
+++ b/pages/p8/955846.md
@@ -1,4 +1,4 @@
-### 揭密：英军为何能在黑夜准确击落纳粹飞机？(图)
+### 俗语“有茶有酒多兄弟”下句10人9不知(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,13 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="英俊战士战斗机。" src="https://img3.secretchina.com/pic/2020/1-5/p2597831a839975789-ss.jpg"/>
+ <p style="text-align: center;">
+  <img alt="俗语 文化 智慧 传统" src="https://img3.secretchina.com/pic/2020/12-15/p2838462a507116872-ss.jpg"/>
   <br>
-   英俊战士战斗机。（图片来源：公有领域）
+   <strong>
+    俗语
+   </strong>
+   “有茶有酒多兄弟”，下句10人9不知。（图片来源：Adobestock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,90 +32,49 @@
   </div>
  </div>
  <p>
-  1940年10月开始，
+  博大精深的中国
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/纳粹" target="_blank">
-    纳粹
-   </span>
-   德军
+   文化
   </strong>
-  对
+  ，历史传承横跨数千年，给我们后代子孙留下了许多宝贵
   <strong>
-   英国
+   智慧
   </strong>
-  展开夜间轰炸，起初由于英军战机夜战能力有限，德军轰炸机几乎为所欲为。但渐渐地，德国
-  <strong>
-   飞行员
-  </strong>
-  发现日子越来越难过，英国飞行员似乎都长了一双“猫眼”，能在黑夜里准确发现并击落德机，这到底是为什么呢？
+  ，而
+  <span href="https://www.secretchina.com/news/gb/tag/俗语" target="_blank">
+   俗语
+  </span>
+  就是其中之一，在中国文化中，俗语也一直占有非常重要的地位。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
+  虽然这些俗语大都是民间的百姓创造出来的，但是其中蕴含着不少人生道理，对我们后人的生活有着指导意义，也让我们的言行举行充满了真诚、善良、忍让……等美好的
   <strong>
-   胡萝卜“造就”空中英雄？
+   <span href="https://www.secretchina.com/news/gb/tag/传统" target="_blank">
+    传统
+   </span>
   </strong>
+  。
  </p>
  <p>
-  对于这个问题，不光德军想知道答案，英国老百姓也想知道。于是，负责食物供给的英国官员站出来，宣称皇家
-  <span href="https://www.secretchina.com/news/gb/tag/空军" target="_blank">
-   空军
+  也因为俗语的生活化，所以有的时候听起来较通俗，没有诗词歌赋来得优雅，但是这正是俗语的特点，通俗不媚俗，用适合民间的简单语言讲述人生的大道理，有时反而比那些文学词语更容易让人接受和理解。
+ </p>
+ <p>
+  而在中国传统观念中，整个社会是充满人情味的。例如在谈生意，或是与人交流的时候，都少不了会泡茶来喝，借此增减氛围；甚至当生意谈妥以后，还会相约去聚餐喝酒。而这些都是生意场上十分常见的事情。
+ </p>
+ <p>
+  所以自古以来，中国也充满了“茶
+  <span href="https://www.secretchina.com/news/gb/tag/文化" target="_blank">
+   文化
   </span>
-  飞行员吃了大量胡萝卜，正是其中的维生素使得他们的视力变得异常锐利。
+  ”与“酒文化”。今天笔者要跟大家介绍的，就是在这些喝茶喝酒的讲究里面，有这么一句俗语：“有茶有酒多兄弟”，其中下半句更是古人的忠告，可惜十人九不知！不知你是否有听过呢？
  </p>
- <p>
-  吃胡萝卜能当英雄，还有什么比这套说辞能让英国人停止抱怨肉食不够，转而心甘情愿地大嚼胡萝卜呢！一时间，伦敦街头巷尾，大家都在谈论胡萝卜的“丰功伟绩”。德国人虽然半信半疑，但也不得不接受这一解释。德国科学家认为，胡萝卜中含有大量有利于视力的维生素，英国
-  <span href="https://www.secretchina.com/news/gb/tag/飞行员" target="_blank">
-   飞行员
-  </span>
-  视力大增，很可能与他们的食物有关。
- </p>
- <p>
-  战后，英军夜战王牌飞行员约翰･坎宁汉姆提及此事，不禁大笑起来：“截至1941年5月，我已在夜间击落12架德机，因为我的飞机上装备了极为秘密的仪器，能在夜间帮助我准确锁定德机，就像我长了一双‘猫眼’。而英国空军部为了掩饰该仪器的存在，故意编了个故事，说我们是常吃胡萝卜才厉害起来。”
- </p>
- <p>
-  坎宁汉姆提到的秘密仪器就是AI机载雷达，当时
-  <span href="https://www.secretchina.com/news/gb/tag/德军" target="_blank">
-   德军
-  </span>
-  只知道英军有地面预警雷达，但对AI机载雷达一无所知。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  档案显示，早在1937年，英国就研制出世界上第一部
-  <span href="https://www.secretchina.com/news/gb/tag/机载雷达" target="_blank">
-   机载雷达
-  </span>
-  ，科学家鲍恩博士领导的小组将一部小雷达安装到“安森”侦察机上，可探测到16千米外的船舶，后经改进增添了探测飞机的功能，被正式命名为“AI”。但装备了AI雷达的“安森”飞机太过落后，即便有雷达帮助，也很难与德国夜袭飞机抗衡。为了应急，英国皇家空军借用“美丽堡垒”轰炸机的机翼和后机身，研制出装备AI雷达的双发双座重型战斗机，命名为“英俊战士”。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
   <strong>
-   德军恐惧的“寂静死神”
+   ●有茶有酒多兄弟
   </strong>
  </p>
  <center>
@@ -128,7 +90,7 @@
   </div>
  </center>
  <p>
-  “英俊战士”名为“英俊”，但样子短粗臃肿，根本算不上英俊。坎宁汉姆说：“该机样子虽丑，威力却很大，时速可达515千米，加上自带的4门20毫米航炮和6挺航空机枪，火力超过当时任何一款战斗机。”
+  在生活中，我们常常可以听到这样一句话：“富在深山有远亲”，这与“有茶有酒多兄弟”其实讲的是同一个意思。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -143,7 +105,75 @@
   </div>
  </center>
  <p>
-  从1940年9月开始，100架“英俊战士”战斗机装备了英军4个夜战中队。它能在AI雷达引导下悄悄接近目标，然后4门航炮同时开火，只需一个短点射就能将德国轰炸机打得凌空爆炸。
+  每个人对自己的人生都充满理想，但即使如此，社会还是有现实的一面。当你事业顺利，或是人生处于巅峰时，身边总不乏“锦上添花”的朋友。而这里面就有相当一部分，都是属于趋炎附势之徒，甚至可以说是“酒肉朋友”！
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align: center;">
+  <img alt="每个人对自己的人生都充满理想，但即使如此，社会还是有现实的一面。" src="https://img3.secretchina.com/pic/2020/12-15/p2838472a998821469-ss.jpg"/>
+  <br>
+   每个人对自己的人生都充满理想，但即使如此，社会还是有现实的一面。（图片来源：Adobestock）
+  </br>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  他们之所以会与我们互动热络，很多时候只是为了搭“顺风车”，以此谋取自己的私利。因此被这些人包围时，可千万不要被他们的花言巧语所蒙蔽，陷入纸醉金迷的生活中。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  而下一句俗语，也正是道出了社会的现实面。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   ●
+  </strong>
+  <strong>
+   急难何曾见一人
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -162,7 +192,7 @@
   </ins>
  </center>
  <p>
-  “英俊战士”另一个可怕之处是发动机声音小，德军往往刚听到声音就已经进入它的射程，很快被击落了，所以德国人把“英俊战士”叫作“寂静死神”。
+  跟上一句俗语“有茶有酒多兄弟”相较之下，这句才是精华，也更能从中看出一个人的道德品行！因为只有遇到挫折的时候，我们才能从中发现，当初身边所围绕的那些朋友，究竟谁是“酒肉朋友”，谁又能“肝胆相照”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -177,9 +207,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   成功的关键是团队合作
-  </strong>
+  当然跟这句俗语有同样涵义的“富在深山有远亲”，下一句也跟这句俗语十分类似，那就是“穷在闹市无人问”！
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -194,7 +222,7 @@
   </div>
  </center>
  <p>
-  具体到坎宁汉姆本人，他在夜战中击落20架德机，他驾驶的“英俊战士”飞机身上贴满了表示击落德机数量的“铁十字”。
+  不管社会如何变迁，只要活在这世上，无论生活或是工作中，永远不缺乏“锦上添花”的人，但愿意“雪中送炭”的人就少很多了。正因如此，古人才会有这样的感叹。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -209,7 +237,7 @@
   </div>
  </center>
  <p>
-  1940年11月19日，坎宁汉姆驾机拦截袭击伯明翰的德国机群，将一架Ju－88轰炸机击落，首开AI雷达引导攻击成功的记录。次年4月，坎宁汉姆的夜战生涯迎来胜利的高峰，他在一个夜晚就击落3架德机。
+  所以无论贫富贵贱，在生活中结交朋友的时候，我们除了要注意观察周遭的朋友外，对我们的朋友更要珍惜对待，不要用物质的眼光来区分朋友的亲疏远近。因为当我们能够以诚待人，才能够被别人以诚待之。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -224,7 +252,7 @@
   </div>
  </center>
  <p>
-  二战结束后，有人问他如何成为夜战王牌，坎宁汉姆笑了笑：“很简单，观察员只要紧盯十字线上的绿点就行了，不需要吃很多胡萝卜。”然后，他又严肃地说：“其实，我们成功的关键是团队合作，夜战就像一座金字塔，两个人驾驶‘英俊战士’飞在高空，下面是地面引导雷达、探照灯和控制站，身处其中的每个人都要做好自己的工作，这样才能环环相扣。否则，多先进的飞机也是浪费！”
+  看完本次俗语的介绍，如果您觉得内容不错，欢迎转传给朋友；若有自己的心得感想，也欢迎在底下留言，与读者分享。
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -238,11 +266,11 @@
    </div>
   </center>
   <p>
-   责任编辑:辰君
+   责任编辑:察方
   </p>
   <p>
    本文短网址:
-   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb3uaL"/>
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb40es"/>
    转载请注明出处，
    <span style="color:red">
     严禁建立镜像网站
@@ -288,13 +316,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/932501.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/08/932501.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/955846.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/955846.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/955846.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/15/955846.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p6/932501.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/955846.md' width='0px' height='0px'/>
