同步于: 12月16日5时3分

--- a/pages/soh6/453889.md
+++ b/pages/soh6/453889.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="美国总统川普（AP）" src="https://img.soundofhope.org/2020-12/79-1608055045903.jpeg"/>
+<div><img alt="美国总统川普（图片来源：美联社/AP）" src="https://img.soundofhope.org/2020-12/79-1608055045903.jpeg"/>
 <br/><figcaption class="caption">
- 美国总统川普（AP）
+ 美国总统川普（图片来源：美联社/AP）
 </figcaption></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
@@ -19,7 +19,7 @@
   <span class="meta">
    【希望之声2020年12月15日】（本台记者凌杉综合报导）
   </span>
-  美国国会众议员布鲁克斯（Mo Brooks）表示，在12月14日，多州共和党人
+  美国国会众议员布鲁克斯（Mo Brooks）说，在12月14日，多州共和党人
   <ok href="/term/20649">
    选举人
   </ok>
@@ -27,7 +27,7 @@
   <ok href="/term/440143">
    替代票
   </ok>
-  ，这是在过去是有据可查的。他非常有信心，“如果我们只统计符合条件的美国公民选票，川普将会赢得
+  ，这是在美国历史上是有据可查的。他表示非常有信心，“如果我们只统计符合条件的美国公民选票，川普将会赢得
   <ok href="/term/20649">
    选举人
   </ok>
@@ -45,7 +45,7 @@
   ，这一行动是维护选民在法律下的权利的重要举动。
  </p>
  <p>
-  12月15日（周二），美国总统川普转发推文说，“目前的选举状态：川普正在证实自己的胜利，而拜登在假装自己能做到。”
+  周二，美国总统川普转发推文说，“目前的选举状态：川普正在证实自己的胜利，而拜登在假装自己能做到。”
  </p>
  <p>
   法律进展方面，川普团队在新墨西哥州提起诉讼，对该州的2020年大选结果提出质疑。
@@ -54,11 +54,11 @@
   以下是希望之声为您整理的12月15日新闻：
  </p>
  <h2>
-  众议员布鲁克斯：川普赢了
+  众议员布鲁克斯：川普将赢得
   <ok href="/term/20649">
    选举人
   </ok>
-  我会坚持为美国而战
+  团 我会坚持为美国而战
  </h2>
  <p>
   周二，川普转发一份采访文章，其中阿拉巴马国会众议员布鲁克斯（Mo Brooks）表示，他将会继续为美国而奋战，挑战拜登阵营所声称的结果。
@@ -230,6 +230,27 @@
   美媒Newsmax报道指出，由于这些投票机错误率超过68％，考虑到联邦选举委员会允许投票系统的最大错误率仅为0.0008％，这种错误率是惊人的。
  </p>
  <h2>
+  白宫：川普没有让步 将继续发起挑战
+ </h2>
+ <p>
+  周二，白宫新闻秘书凯里·麦肯尼（Kayleigh McEnany）表示，
+  <ok href="/term/1203">
+   川普总统
+  </ok>
+  不会轻易让步，称他“仍在参与正在进行的诉讼”，致力于对选举提出挑战。
+ </p>
+ <p>
+  麦肯尼说，周一的
+  <ok href="/term/20649">
+   选举人
+  </ok>
+  团投票是在宪法规定的就职日，1月20日之前程序中的一步，于此同时，
+  <ok href="/term/1203">
+   川普总统
+  </ok>
+  仍在挑战选举，“为这场选举进行诉讼。”
+ </p>
+ <h2>
   川普团队在新墨西哥州提出选举诉讼
  </h2>
  <p>
@@ -244,6 +265,19 @@
  </p>
  <p>
   “总统的诉讼是有效和必要的”，新墨西哥共和党主席史蒂夫·皮尔斯（Steve Pearce）在一份声明中说，““我们对这些投递箱和整个选举过程都提出了质疑，州务卿似乎在制定自己的规则，并允许在过去的选举中发生违法行为。”
+ </p>
+ <p>
+  相关文章：
+ </p>
+ <p class="title">
+  <ok href="https://www.soundofhope.org/post/453493">
+   【选情更新12/14】本周是关键 弗林将军：总统应宣布戒严
+  </ok>
+ </p>
+ <p class="title">
+  <ok href="https://www.soundofhope.org/post/453931">
+   【视频直播】密州议会选举听证 多米尼CEO首次出席
+  </ok>
  </p>
  <p class="meta-btm">
   责任编辑：张莉莉
