--- a/pages/p4/955930.md
+++ b/pages/p4/955930.md
@@ -1,4 +1,4 @@
-### 联合国数据中心落脚杭州 民主国家定会抵制(图)
+### 正邪大战正酣 信仰者必再创辉煌(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="联合国总部 纽约" src="https://img2.secretchina.com/pic/2019/9-24/p2524701a744216678-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="川普" src="https://img3.secretchina.com/pic/2020/12-13/p2837039a831985624-ss.jpg" style="height:450px; width:600px"/>
   <br>
-   联合国位于纽约的总部（图片来源：Aotearoa/wikipedia/CC BY-SA）
+   12月12日，川普支持者在华盛顿DC集会（图片来源：看中国）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,155 +21,52 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
   【看
-  <span href="https://www.secretchina.com/news/gb/tag/中国" target="_blank">
+  <span href="https://www.secretchina.com" target="_blank">
    中国
   </span>
-  2020年10月17日讯】纽约—两位中国籍官员，一位代表
-  <strong>
-   中国
-  </strong>
-  政府，一位代表
-  <strong>
-   联合国
-  </strong>
-  ，签了一份意向书，确定联合国第一个大数据研究中心将建在中国杭州，距离中国电商巨头阿里巴巴总部不远的地方。尽管这一计划获联合国支持，但专家质疑这是中国借联合国金字招牌为自己设立的“全球
-  <strong>
-   情报网
-  </strong>
-  ”。
+  2020年12月16日讯】《圣经》中记载，伪善的法利赛人尽管恪守摩西戒律，但却对律法蕴含的内在公义、善良、勇敢、忠诚的品质置之不理。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  “当美国试图限制数据流向北京之时，位于纽约的
-  <span href="https://www.secretchina.com/news/gb/tag/联合国" target="_blank">
-   联合国
+  “上帝的归上帝，凯撒的归凯撒。”美国
+  <span href="https://www.secretchina.com/news/gb/tag/最高法院" target="_blank">
+   最高法院
   </span>
-  秘书处正与北京合作，要在中国建立一个全球联合数据中心，”哈德逊研究所研究员克劳蒂娅・罗塞特(Claudia Rosett)在《华尔街日报》撰文。该计划包括建立一个处理联合国成员国数据的研究中心，和一个利用卫星监视技术彰显中国实力的地理空间中心。
+  在二零二零大选正邪大战中，将原本归属上帝的天赋人权，诬判、错归给了魔鬼。
  </p>
  <p>
-  “作为世界领先的高科技监视国，中国很乐意提供帮助，”罗塞特说。
- </p>
- <p>
-  罗塞特是女性独立论坛的外交政策研究员、《华尔街日报》前记者。她曾于1989年在北京报道天安门事件，也是联合国腐败的批评者，著有《联合国怎么办》(What to Do about the U.N.)，批评联合国在完成其使命方面极为失败并很危险。
+  对此，
+  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
+   川普
+  </span>
+  (特朗普)总统评价道：“最高法院对美利坚合众国有史以来最大规模的选民欺诈案零兴趣。他们所感兴趣的只是‘地位’，这使总统很难就案情提出案件。75,000,000选票！”
  </p>
  <p>
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
-    习近平
-   </span>
-   亲自宣布
+   德州终极诉讼遭无理驳回
   </strong>
  </p>
  <p>
-  中国国家主席习近平9月22日在联大辩论视频发言中宣布“为支持联合国在国际事务中发挥核心作用”，“中国将设立联合国全球地理信息知识与创新中心和可持续发展大数据国际研究中心”。
+  二零二零大选，川普的法律战屡屡受阻，深层政府把持的美国各阶层权力机构及媒体科技巨头，视八千万美国选民的民意于不顾，一意孤行地欲将舞弊的拜登推上总统宝座。愤怒和失望中的美国人民将希望寄托在了美国最高法院身上，不曾想，这个本应是维护美国宪法、捍卫宪制的最高堡垒，却开创了一个与美国民主与法制价值相违背的破坏性先例。
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  这一计划始于2019年。当年6月，中国国家统计局局长宁吉喆和联合国负责经社事务的副秘书长刘振民在上海会晤，签署了“联合国—国家统计局大数据研究所”谅解备忘录。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  联合国经济和社会事务部是纽约联合国秘书处主管经济和社会发展的部门。从2007年以来，这个部门一直由来自中共派出的官员领导。现任该部负责人是中国前外交部副部长刘振民。该部门网站的中文介绍说，联合国“经（济）社会部的影响力已远远超出联合国的大门”，其工作主要是，“制定规范”、“数据和分析”、“能力建设”三大类。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  联合国解释了什么是“地理空间信息”(Geospatial Information):“每件事都发生在某个地方，但是我们要如何去了解哪里正在发生什么事？什么时候发生的？发生的理由又是什么？这一切的答案就在地理空间信息。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  这一大数据中心被纳入联合国“2030可持续发展议程”，共17项目标，包括健康福祉、和平正义。联合国认为，大数据技术地理空间信息，“可以帮助我们衡量、监测和管理可持续发展目标，并改善人们生活和保护地球。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   中共对数据流内外有别
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  讽刺的是要为联合国建全球大数据中心的中国，至今不允许联合国到中国调查原发于中国武汉、肆虐全球的
-  <span href="https://www.secretchina.com/news/gb/tag/新冠病毒" target="_blank">
-   新冠病毒
+  十二月八日，德州总检察长帕克斯顿向最高法院提起诉讼，指控宾州等四个摇摆州以
+  <span href="https://www.secretchina.com/news/gb/tag/中共病毒" target="_blank">
+   中共病毒
   </span>
-  (又称中共病毒，COVID-19)大流行起因，“本来按照国际公共卫生条例，中共作为原发国你是有责任和义务应该让相关专家到疫情原发地进行考察，可是它就是不让你进来，国际社会拿它毫无办法，”北京之春荣誉主编胡平告诉美国之音。
+  (又称新冠状病毒，COVID-19)疫情为由，不经立法程序，通过行政命令或双方协议的诉讼，就修改选举法规，做法损害了选举的安全和诚信，要求最高法院裁决禁止对这四个州的选举人票计票，同时要求最高法命令已经任命选举人的州，由议会重新任命选举人。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -184,7 +81,7 @@
   </div>
  </center>
  <p>
-  联合国负责经济和社会事务的副秘书长刘振民9月在联合国全球地理信息管理专家委员会上宣布，“在中国政府强大而慷慨的支持下”，“中国德清全球地理知识和创新中心将通过最后的行政批准。”
+  德州起诉迅速发酵，两天内，有六个州以动议加入，十三个州以法庭之友声明支持德州的诉讼，川普总统也加入德州诉讼。截止十二月十一日，有一百二十六名国会众议员表示支持德州向最高法提出的终极诉讼。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -199,7 +96,7 @@
   </div>
  </center>
  <p>
-  为什么是浙江省德清县？其中凸显中共利用联合国所作的长期努力。联合国首届全球地理空间信息管理论坛于2011年在韩国首尔举行，但并无永久会址。2012年初，经过中国国家测绘地理信息局积极争取，联合国统计司同意永久会址落户在浙江杭州。统计司是联合国经济社会部下属机构。
+  这本应是美国最高法院主持公道、维护美国宪法权威、拯救美国，抵制共产主义入侵的好机会。然而十二月十一日晚，最高法七个大法官以德州在其它州选举问题上没有证明其在司法上可识别的利益，因此而缺乏在宪法下的诉讼资格而将德州诉讼予以驳回。但仍有两个保守派大法官认为德州诉讼应该受理。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -214,7 +111,7 @@
   </div>
  </center>
  <p>
-  2015年，浙江省将德清作为其地理信息空间中心，而联合国的这一论坛就落户德清了。在这一期间联合国统计司上属的经济社会部经历了刘振民的两位前任，沙祖康（2007至2012）和吴红波（2012至2017）。这也许部分解释了为什么2007年后中国派往联合国的副秘书长都主掌这一部门。
+  有网友打了个比方：
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -229,7 +126,7 @@
   </div>
  </center>
  <p>
-  罗塞特说，德清“曾于2018年举办联合国世界地理空间信息大会，而大数据研究所在距离德清不到一个小时车程的杭州。”
+  邻居家有人正在恶意纵火，火势蔓延危及整个单元、整栋楼、整座社区，对面楼宇有人报警派出所，派出所九个警察有七个警察回应：在纵火家庭这个问题上，报警家庭没有证明其在司法上可识别的利益（因为大火目前没烧着报警者的家），因此报警者缺乏合法报警资格，驳回，不予出警。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -244,7 +141,7 @@
   </div>
  </center>
  <p>
-  杭州是中国科技巨头阿里巴巴集团所在地，该集团联合创始人兼前执行董事长马云与梅琳达・盖茨(Melinda Gates)共同主持了联合国秘书长安东尼奥・古特雷斯(Antonio Guterres)组织的2018年联合国“数字合作”高级别小组会议。
+  这就是美国最高法院关于德州提诉判决的真实写照。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -260,7 +157,7 @@
  </center>
  <p>
   <strong>
-   联合国服务于中共全球野心？
+   朱利安尼：我们历史上一个公开的疮疤
   </strong>
  </p>
  <center>
@@ -276,7 +173,7 @@
   </div>
  </center>
  <p>
-  “联合国与中美亿万富翁之间的关系不断加深，正服务于中国共产党争取全球霸主的愿望，”罗塞特表示。
+  美国最高法的裁决让很多人非常失望。德州共和党主席韦斯特（Allen West）发表回应表示：“这对其它的遵守法律的州造成了破坏性影响。这让有罪的州无需承担任何后果。”同时呼吁：“也许守法的州应该联合起来，组成一个遵守宪法的联盟。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -291,7 +188,7 @@
   </div>
  </center>
  <p>
-  “这种设置很容易成为中国的全球情报网络，”罗塞特说。“习近平向联合国—中国地理空间和大数据综合体承诺，将允许其在整个时空范围内详细绘制从地形和基础设施到人类行为的所有内容，”她补充道。
+  有时评人评论，美国最高院的做法将美国推向了国家分裂的危险边缘，德州历史上原本是墨西哥的领地，一八三五年，德州认为墨西哥违背了一八二四年宪法而爆发革命，一八三六年正式宣布独立，成立了德克萨斯共和国。一八四五年德州选择成为加入美国联邦成为美国第二十八个州。如今，美国大选违宪，最高法坐视不管，德州会做何感想？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -306,7 +203,7 @@
   </div>
  </center>
  <p>
-  罗塞特认为，首先因为中共政权已经建立了全世界最强大的高科技全民监视系统。它通过“防火长城”控制国内互联网，禁止网民使用官员可以进行宣传的美国社交媒体平台，如脸书和推特。
+  朱利安尼说，“本案不是因为案件实质被拒，而是因资格被拒。”“这是一个可怕的、可怕的错误。除非得到解决，否则这些事实将继续成为我们历史上一个公开的疮疤。它们需要被倾听，需要被播出，需要有人对它们是真还是假做出决定，一些法院要有勇气做出这个决定。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -321,11 +218,103 @@
   </div>
  </center>
  <p>
-  今年早些时候武汉
-  <span href="https://www.secretchina.com/news/gb/tag/新冠肺炎" target="_blank">
-   新冠肺炎
+  川普总统针对高院的裁定发推文说，“这是一个巨大的可耻的误判，美国人民被欺骗了，我们的国家蒙羞了，甚至连上法庭的机会都没有。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   社会主义者们的“幻想足球”
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  前一段时间，当拜登团队忙于过渡政府入主白宫不亦乐乎的时候，伊万卡发推文预示拜登等社会主义者们正在踢“幻想足球。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  浅层意义上来看，伊万卡指的是拜登大选舞弊，终究纸包不住火，总统梦只是个“幻想足球”游戏罢了。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  如果我们从深层解读，那些拥护拜登的，无论是被欺骗迷惑的，威胁裹挟的，还是心甘情愿的，他们对共产主义社会真的是不甚了解，幻想着邪灵许诺的自由、解放、平等、富裕，误以为社会主义是一切免费，为所欲为者们的天堂。但凡有着社会主义国家经历的人绝对不会这么想。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  已经来美三十年左右的大陆作家郑义在连线希望电台节目视频中说，美国大选使我闻到了一九四九年中华民国的味道。郑义表示他逃离大陆多年，不想看到美国成为沦陷的大陆。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  二零一五年，中共假意惺惺地搞“有案必立、有诉必理”，所谓司法改革。当时有二十一万法轮功学员及家属向中共两高控诉迫害法轮功的元凶
+  <span href="https://www.secretchina.com/news/gb/tag/江泽民" target="_blank">
+   江泽民
   </span>
-  爆发之初，正是这一监视系统扼杀了武汉李文亮医生发出的新冠病毒早期警告，并最终导致李文良医生本人在一个多月后死于这一病毒的感染。
+  ，两高在中共的指示下，不仅没有立案，还串通公安部在全国范围内对依法控诉原告进行抓捕迫害。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -344,22 +333,7 @@
   </ins>
  </center>
  <p>
-  中共在习近平领导下已经在全球范围内收集、窃取大量数据，而“联合国具有合法性的招牌将使北京更容易确保来自成员国的数据流，影响联合国收此类数据的标准和规范、形成结果、将其输入联合国系统，并把中共的高科技暴政投射到世界各地，”罗塞特说。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  其次是联合国的配合。“中国已经选择联合国作为习近平的‘一带一路’计划的工具，”罗塞特说。去年，联合国秘书长古特雷斯称赞“一带一路”与联合国可持续发展目标具有“内在联系”；联合国文件显示，包括世界银行和国际货币基金组织在内的数十个联合国分支机构已签署了支持“一带一路”计划的协议，而联合国全部15个专门机构中有4个目前由来自中国的官员管理。
+  可以想见，如果拜登、哈里斯等人上台，美国还会有司法公正吗，还会有自由人权吗？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -375,7 +349,11 @@
  </center>
  <p>
   <strong>
-   民主国家定会抵制
+   荣耀将属于神选之人和神的坚定
+   <span href="https://www.secretchina.com/news/gb/tag/信仰" target="_blank">
+    信仰
+   </span>
+   者们
   </strong>
  </p>
  <center>
@@ -391,7 +369,7 @@
   </div>
  </center>
  <p>
-  胡平说，联合国的很多作为，包括人权委员会，结果成为最反人权国家俱乐部，简直成了笑话，“中共在这些方面本来就恶名昭着、人所共知，你还把这种（大数据）合作交给中国政府，所以联合国现在很多作为已经让人非常忧虑了，因此，建立一个新的民主国家同盟就显得更必要。”
+  托克维尔在《论美国的民主》中说过：“国家意志是任何时候的阴谋家和所有时代的暴君最常滥用的口号之一。一些人在某些当权者的贿选时听到过它，还有一些人在某些少数人为谋求私利和出于畏惧而帮人拉选票的过程中也听到过它。甚至有些人把人民的沉默认为是对这一口号的正式承认，认为服从的事实就是默认他们发号施令的权力。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -406,7 +384,7 @@
   </div>
  </center>
  <p>
-  旅美法律专家虞平告诉美国之音，中国建联合国大数据中心其困境是无法取信于世界。“中国怎么样向全世界解释它的体制能够，第一个，隐私权是不受侵犯的；第二个，能够更进一步保证不用这些数据去强化其专制体制，来镇压人民的言论自由，”虞平说。
+  托克维尔同时强调，在美国，人民主权原则是统治整个社会的、合法的万能的事实；它可以自由的传播，取得最大的收效而不受阻碍。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -421,7 +399,7 @@
   </div>
  </center>
  <p>
-  虞平表示，无论这个未来的联合国大数据中心在中国以什么形式运作都会受到中国政府直接控制或者干预，因为“极权统治控制你生活的所有方面。民主国家视中国为洪水猛兽的很大原因是他全方位地控制了中国的所有资源。因此，中国每强大一分，其专制政权的控制力也强大一分。这是最大的问题。”
+  然而今天，被人类真正的敌人，共产主义幽灵侵蚀后的美国，人民主权的光泽已经暗淡无光，近亿选民的冤屈无处伸张，言论自由被无情封锁，精神与信仰的价值被误导和异化，一个叛国犯罪集团首要分子，被强行认定为美国人民的总统。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -436,7 +414,7 @@
   </div>
  </center>
  <p>
-  皮尤研究中心(Pew Research Center)10月6日发布的调查结果显示，全球14个发达民主国家绝大多数对中国的负面看法升至10年来新高。他们是澳大利亚（81%）、英国（74%）、德国（71%）、荷兰（73%）、瑞典（85%）、美国（73%）、韩国（75%）、西班牙（63%）、法国（70%）、加拿大（73%）、意大利（62%）、日本（86%），以及比利时和丹麦。
+  十二月十二日，一场巨大的民众“美国首都制止窃选活动”大游行正在进行中，无数民众聚集在美国最高法院前发出心声。有民众表示：“我向神祈祷，希望川普能连任，我也知道这一点。我不是为川普而战，是为神而战。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -451,7 +429,7 @@
   </div>
  </center>
  <p>
-  同一调查还显示，这些发达国家7成至8成多民众对中国国家主席习近平丧失信心。
+  有推特网友发推文说：“如果拜登舞弊上台的话，我有一个预感，我们人类将面临着十灾（《出埃及记》中的十灾），一个不落下，也许上帝已经决定抛弃人类另起炉灶了。但是即便如此我依然选择光明与正义！不出卖灵魂。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -466,7 +444,37 @@
   </div>
  </center>
  <p>
-  “任何事情都不可能到百分之百，到百分之七、八十其实已经到了最大限度了，最反感了，比这个更反感都不太可能做得到了，都已经到顶了，”北京之春荣誉主编胡平说。“在这么恶劣的情况之下你想它就是建立起来，这些国家的民众也会拒绝把他们的相关信息交给你这个所谓以联合国为招牌的这么一个大数据中心。这个事情一定会遭到很多国家有力地抵制，”胡平断言。
+  当天，川普在记者会上传递了一个重要信息：“我只是想告诉我的支持者，因为这场竞赛还远未结束。”这场竞赛不只是跟拜登，而是跟他背后的国际阴谋集团，共产主义中共及伊朗。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  神的信仰者们有一个传说，川普是神选之人，必定为今天的大事经过久远年代的准备与历炼。古往今来，无论是唐太宗的玄武门之变、明永乐大帝的靖难之役、清圣祖康熙的智擒鳌拜，还是林肯总统的乱中平叛，无不书写着天选明君的超强睿智与决绝勇气，还有那些领悟天意助天行道的谋士与顺天而行的民众们，他们共同谱写了人间正邪大战的辉煌历史篇章。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  邪不压正，二零二零年正邪大战，神选之人与神的信仰者们必将再行神迹，再创辉煌。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -481,6 +489,33 @@
   </div>
  </center>
  (文章仅代表作者个人立场和观点)
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  来源:
+  <span href="/news/gb/tag/明慧网  ">
+   明慧网
+  </span>
+ </p>
+ <p>
+  本文短网址:
+  <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb40gE"/>
+  转载请注明出处，
+  <span style="color:red">
+   严禁建立镜像网站
+  </span>
+  .
+ </p>
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
@@ -502,42 +537,30 @@
     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
-  <center>
-   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-    <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-    </div>
-   </div>
-   <div>
-    <center>
-     <div id="div-gpt-ad-1589559869784-0">
-     </div>
-    </center>
-   </div>
-  </center>
-  <center>
-   <div>
-    <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
-     <div id="SC-21xx">
-     </div>
-     <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="auto" data-ad-slot="4301710469" data-full-width-responsive="true" style="display:block">
-     </ins>
-    </div>
-   </div>
-  </center>
-  <div style="padding-top:12px;">
-  </div>
  </p>
+ <center>
+  <div>
+   <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
+    <div id="SC-21xx">
+    </div>
+    <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="auto" data-ad-slot="4301710469" data-full-width-responsive="true" style="display:block">
+    </ins>
+   </div>
+  </div>
+ </center>
+ <div style="padding-top:12px;">
+ </div>
 </div>
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/949503.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/949503.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/949503.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/17/949503.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/955930.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/955930.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/955930.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/16/955930.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p4/949503.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p4/955930.md' width='0px' height='0px'/>
