--- a/pages/p1/955946.md
+++ b/pages/p1/955946.md
@@ -1,4 +1,4 @@
-### 丢车保帅？这张照片泄露了周恩来内心诡秘(图)
+### 遭酷刑的人权律师之父 微博发文提3诉求(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="周恩来1955年4月16日上午抵达新加坡加冷机场，其诡异的眼神或泄露其当时的诡秘内心世界。（网络图片）" src="https://img2.secretchina.com/pic/2019/10-31/p2552801a305236912-ss.jpg" style="height:338px; width:600px"/>
+  <img alt="陕西人权律师常玮平的父亲常拴明除控诉儿子遭到迫害外，亦要求与儿子共同被指定居所监视居住，以防止儿子再被迫害。" src="https://img3.secretchina.com/pic/2020/12-16/p2839071a183214015-ss.jpg" style="height:336px; width:600px"/>
   <br>
-   周恩来1955年4月16日上午抵达新加坡加冷机场，其诡异的眼神或泄露其当时的诡秘内心世界。（网络图片）
+   陕西人权律师常玮平的父亲常拴明除控诉儿子遭到迫害外，亦要求与儿子共同被指定居所监视居住，以防止儿子再被迫害。（图片来源：微博）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,61 +29,49 @@
   </div>
  </div>
  <p>
-  1955年4月11日，
+  【看中国2020年12月16日讯】（看中国记者卢乙欣综合报导）继14日前往宝鸡公安局高新分局挂牌抗议、
   <strong>
-   万隆会议
+   维权
   </strong>
-  前夕，“
+  讨公道，陕西
   <strong>
-   克什米尔公主号
-  </strong>
-  ”飞机爆炸案曾震惊国际。随后真相不断披露，时任中共总理
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/周恩来" target="_blank">
-    周恩来
+   人权律师
+   <span href="https://www.secretchina.com/news/gb/tag/常玮平" target="_blank">
+    常玮平
    </span>
   </strong>
-  预先已知道这起针对他的暗杀行动，但周为了自保和迷惑对手，临时改变路线却让其他人作了替死鬼。
+  的父亲常拴明15日在微博上发文控诉，除再次强调“反
+  <strong>
+   酷刑
+  </strong>
+  救我儿”外，还向当局提出3项要求。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  网络曾曝光一张当时周恩来改变路线后于1955年4月16日上午抵达新加坡加冷机场的罕见照片，照片中周恩来诡异的眼神或泄露其当时的诡秘内心世界。从照片上看，周恩来和许多随行人员在一起，大家都目视前方，行色匆匆，唯有周恩来微仰着头，向天空张望，目光诡异。
- </p>
- <p>
-  此前4月11日，周恩来原计划乘坐的“
-  <span href="https://www.secretchina.com/news/gb/tag/克什米尔公主号" target="_blank">
-   克什米尔公主号
+  综合
+  <span href="https://www.secretchina.com/news/gb/tag/维权" target="_blank">
+   维权
   </span>
-  ”飞机爆炸，机上有11人无辜遇难，而预先知悉暗杀计划的周恩来则金蝉脱壳。
+  网与自由亚洲电台报导，14日正好是遭酷刑的维权律师常玮平第二次遭到当局抓捕的第55天。外界相信，常玮平再次失去自由，是跟他日前透过视频披露自己曾遭当局酷刑有关
  </p>
  <p>
-  <strong>
-   掌握情报“克什米尔公主号”有炸弹
-  </strong>
+  年迈两老特地伙同常玮平的岳父、大姊夫前往当地公安局门口抗议，两老还身挂写有“反
+  <span href="https://www.secretchina.com/news/gb/tag/酷刑" target="_blank">
+   酷刑
+  </span>
+  救我儿”及“依法与儿共同生活”的“大字报”。不过，不到5分钟，就遭警方中止维权。
  </p>
  <p>
-  综合多方报导，1955年4月18日至24日，第一次亚非会议在印度尼西亚的万隆举行。周恩来为中国代表团团长，并租用印度航空公司的“克什米尔公主号”客机，率团取道香港前往万隆。
+  常拴明15日上午9时45分在微博上发文控诉：身为父亲，他不能眼睁睁看着由曾酷刑过他儿子的办案单位继续秘密关押儿子、秘密办案；他的控诉没人理，他请的律师被带走。他提出3项诉求：
  </p>
  <p>
-  4月3日，中共接到密报，国民党特务机关已获悉中共代表团行踪，可能采取行动。9日晚，进一步情报称，代表团所乘飞机将遭破坏，飞机上备有定时炸弹。周恩来立即要求通过外交渠道向英国政府交涉。
+  1、请高新分局调查今年1月对常玮平施以酷刑的涉案人员名单，追究法律责任。
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  10日上午，中共外交部紧急约见英国驻华代办处参赞艾惕恩，告知这一消息。新华社香港分社9日晚即将这一情况正式通知港英当局，还在11日两次约见印度航空公司驻香港分公司经理。该经理表示一定严加防范，不让任何外人接近飞机。
+  2、鉴于高新分局在今年1月的酷刑行为，对高新分局提出管辖权异议，请上级重新指定管辖。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -98,7 +86,7 @@
   </div>
  </center>
  <p>
-  在当年四月十一日“克什米尔公主号”出事前八天，中共就掌握了“克什米尔公主号”客机将被炸毁的情报。
+  3、常玮平的父母要求跟常玮平共同生活，接受监视，以防止儿子被继续酷刑。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -113,9 +101,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   照常起飞中途爆炸坠海导致11人遇难
-  </strong>
+  常拴明自称是中共党员，近期曾遭当局要求不要为儿子发声，而他原先都保持低调，但此次却一反常态，选择跟妻子一同站出来，让人感到意外。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -130,7 +116,7 @@
   </div>
  </center>
  <p>
-  4月11日上午，“克什米尔公主号”准时到达北京，接载中共代表团和三名外国记者，当时人们并不知道周恩来不在飞机上。12时15分，“克什米尔公主号”抵达香港启德机场，休息加油后飞印尼的万隆。
+  常拴明曾去派出所探望儿子，却发现他明显消瘦、反应迟钝。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -145,24 +131,7 @@
   </div>
  </center>
  <p>
-  下午6时30分，机舱内突然发出爆炸声，随即多处起火。机长决定强行降落，并用无线电发出三次求救信号。雅加达机场得知周恩来不在机上，信号中断。伴随着一声巨大的爆炸声，飞机坠入大海，炸成几段。除三名机组人员奇迹生还，机上其余11人全部遇难。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   全身而退 周恩来“丢卒保车金蝉脱壳”
-  </strong>
+  常拴明5日发文表示，“家庭面临妻离子散的当下，我总在想为我儿子做点事，不能这样的苟活着。唯一能做的就是为我儿子发声，不然我儿子不知什么时候不明不白的死了也无人知晓。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -181,7 +150,7 @@
   </ins>
  </center>
  <p>
-  “克什米尔公主号”事件的目标直指周恩来，但周恩来却临时改变了路线，金蝉脱壳，从昆明取道仰光到达雅加达。
+  “中国维权律师关注组”总干事杜松说，杜松表示，两老挂大字报抗议是迫不得已，“他们要喊的冤是什么？就是关于常玮平律师遭受酷刑。这酷刑是达到一个程度，就非常有必要以这方式去表达。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -196,7 +165,7 @@
   </div>
  </center>
  <p>
-  4月7日，周恩来和陈毅率代表团从北京乘伊尔——14飞机首先飞昆明。4月14日清晨7时15分，周恩来一行26人乘坐从印度航空公司租借的另一架专机“空中霸王号”自昆明起飞，前往仰光。当地时间上午10点30分，“空中霸王号”降落在仰光机场。
+  此外，两老的抗议行动还带出了该案涉及管辖权问题。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -211,7 +180,7 @@
   </div>
  </center>
  <p>
-  4月16日凌晨，周恩来一行由仰光飞往雅加达。“空中霸王号”飞行8个小时进入新加坡空域，正赶上航线前方有雷雨区。飞机无法飞越雷雨区，4月16日上午飞机降落新加坡加冷机场。4月16日晚6时，周恩来到达印度尼西亚首都雅加达。
+  杜松说：“常玮平的父亲有提到，他儿子的户口其实是在海南而不是西安，如果要关押的话，应该带到海南，所以他提出了对于管辖权有异议的申请书。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -226,9 +195,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   声东击西 周恩来让别人枉做了替死鬼
-  </strong>
+  一名要求匿名的知情人士透露，家属先后为常玮平聘请至少四名律师，但仍无法介入案件。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -243,22 +210,7 @@
   </div>
  </center>
  <p>
-  “克什米尔公主号”爆炸失事后，香港警方随即展开艰苦的调查，一无所获。后来还是根据中共提供的情报才破了案。中共明确告知事件是国民党保密局香港情报站策动，主谋赵斌成，指挥者金建夫，执行者是香港机场地勤人员周驹，使用的定时炸弹是从台湾基隆秘密运到香港。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  调查人员非常困惑不解：既然周恩来对这事了如指掌，为什么还要中共代表团其他成员按原计划飞行，去送死呢？原来周恩来为迷惑台湾香港情报站不再改变计划，确保自己的安全，让包括自己司机在内的11名中外菁英去送死。据周恩来后来说，这叫做“声东击西”、“丢车保帅”。
+  知情人士说：“他们所有人去申请会见的时候，当地的公安部门都以常玮平涉嫌煽动颠覆国家政权为由，不许律师会见；也都接到了各自所属的行政部门和司法局的干扰，不许他们代理常玮平的案件。张庭源律师的遭遇就更明显，他人已在陕西宝鸡，重庆司法局直接派人到陕西去把他带回重庆。”
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -272,11 +224,14 @@
    </div>
   </center>
   <p>
-   责任编辑:徐枫
+   来源:
+   <span href="/news/gb/tag/看中国  ">
+    看中国
+   </span>
   </p>
   <p>
    本文短网址:
-   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb3qNc"/>
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb40gU"/>
    转载请注明出处，
    <span style="color:red">
     严禁建立镜像网站
@@ -322,13 +277,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/916336.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/916336.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/916336.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/11/916336.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/955946.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/955946.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/955946.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/16/955946.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p6/916336.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/955946.md' width='0px' height='0px'/>
