--- a/pages/soh6/453889.md
+++ b/pages/soh6/453889.md
@@ -1,4 +1,4 @@
-### 【选情更新12/15】众议员：多州选举团投票川普 在过去早有先例
+### 【选情更新12/15】白宫：川普没有让步 将继续发起挑战
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
