--- a/pages/soh6/453889.md
+++ b/pages/soh6/453889.md
@@ -54,11 +54,13 @@
   以下是希望之声为您整理的12月15日新闻：
  </p>
  <h2>
-  众议员布鲁克斯：川普将赢得
-  <ok href="/term/20649">
-   选举人
-  </ok>
-  团 我会坚持为美国而战
+  <strong>
+   众议员布鲁克斯：川普将赢得
+   <ok href="/term/20649">
+    选举人
+   </ok>
+   团 我会坚持为美国而战
+  </strong>
  </h2>
  <p>
   周二，川普转发一份采访文章，其中阿拉巴马国会众议员布鲁克斯（Mo Brooks）表示，他将会继续为美国而奋战，挑战拜登阵营所声称的结果。
@@ -104,11 +106,13 @@
   ，以供后续的法律挑战使用。
  </p>
  <h2>
-  摇摆州共和党主席：
-  <ok href="/term/20649">
-   选举人
-  </ok>
-  团支持川普 他们代表合法投反对票的选民
+  <strong>
+   摇摆州共和党主席：
+   <ok href="/term/20649">
+    选举人
+   </ok>
+   团支持川普 他们代表合法投反对票的选民
+  </strong>
  </h2>
  <p>
   亚利桑那州共和党主席凯莉·沃德（Kelli Ward）说，她所在州的共和党人
@@ -158,7 +162,9 @@
   谢弗说，“如果我们今天不这样做，总统悬而未决的选举竞赛将不能得到有效解决”，“我们今天的行动维护了他在乔治亚州法律下的权利。”
  </p>
  <h2>
-  林伍德：主流媒体沦为共产宣传工具
+  <strong>
+   林伍德：主流媒体沦为共产宣传工具
+  </strong>
  </h2>
  <p>
   周二，美国知名大律师林伍德表示，主流媒体在关于密歇根州多米尼选举系统的鉴定报告的消息上噤声，这是因为它们沦为中共喉舌。
@@ -215,7 +221,9 @@
   。
  </p>
  <h2>
-  审计发现多米尼的系统故意制造错误
+  <strong>
+   审计发现多米尼的系统故意制造错误
+  </strong>
  </h2>
  <p>
   根据调查团队发布的报告，密歇根州安特里姆县的多米尼系统的错误是人为制造的。
@@ -230,7 +238,9 @@
   美媒Newsmax报道指出，由于这些投票机错误率超过68％，考虑到联邦选举委员会允许投票系统的最大错误率仅为0.0008％，这种错误率是惊人的。
  </p>
  <h2>
-  白宫：川普没有让步 将继续发起挑战
+  <strong>
+   白宫：川普没有让步 将继续发起挑战
+  </strong>
  </h2>
  <p>
   周二，白宫新闻秘书凯里·麦肯尼（Kayleigh McEnany）表示，
@@ -251,7 +261,9 @@
   仍在挑战选举，“为这场选举进行诉讼。”
  </p>
  <h2>
-  川普团队在新墨西哥州提出选举诉讼
+  <strong>
+   川普团队在新墨西哥州提出选举诉讼
+  </strong>
  </h2>
  <p>
   周一，川普团队在新墨西哥州提起诉讼，对该州的2020年大选结果提出质疑。
@@ -264,7 +276,7 @@
   员。相关流程被指越过了选举法的规定。
  </p>
  <p>
-  “总统的诉讼是有效和必要的”，新墨西哥共和党主席史蒂夫·皮尔斯（Steve Pearce）在一份声明中说，““我们对这些投递箱和整个选举过程都提出了质疑，州务卿似乎在制定自己的规则，并允许在过去的选举中发生违法行为。”
+  “总统的诉讼是有效和必要的”，新墨西哥共和党主席史蒂夫·皮尔斯（Steve Pearce）在一份声明中说，“我们对这些投递箱和整个选举过程都提出了质疑，州务卿似乎在制定自己的规则，并允许在过去的选举中发生违法行为。”
  </p>
  <p>
   相关文章：
